--- a/public/scss/partials/_component-list.scss
+++ b/public/scss/partials/_component-list.scss
@@ -1,26 +1,41 @@
 .component-list__main {
-	width: 90%;
-	margin: 40px auto;
+	width: 100%;
+	margin: 40px 0;
+	padding-left: 35px;
+	padding-right: 35px;
+
+	@media (min-width: 740px) {
+		padding-left: 0;
+		padding-right: 0;
+	}
 
 	@media (min-width: 900px) {
 		float: left;
-		width: calc(70% - 70px);
+		width: calc(70% - 20px);
 		margin-right: 20px;
-		margin-left: 40px;
+		padding-left: 0;
 		padding-right: 30px;
 		border-right: 1px solid #cec6b9;
+	}
+
+	@media (min-width: 1100px) {
+		width: calc(75% - 20px);
 	}
 }
 
 .component-list__sidebar {
-	width: 90%;
-	margin: 40px auto;
+	width: 100%;
+	margin: 40px 0;
+	padding: 0 35px;
 
 	@media (min-width: 900px) {
 		float: right;
-		width: calc(30% - 40px);
-		margin-left: 0;
-		margin-right: 40px;
+		width: 30%;
+		padding: 0;
+	}
+
+	@media (min-width: 1100px) {
+		width: 25%;
 	}
 }
 
@@ -31,7 +46,12 @@
 
 	th,
 	td {
-		padding: 12px 10px;
+		padding: 12px 0;
+
+		@media (min-width: 900px) {
+			padding: 12px 10px;
+		}
+
 	}
 
 	th {
