--- a/public/scss/partials/_component-navigation.scss
+++ b/public/scss/partials/_component-navigation.scss
@@ -5,13 +5,13 @@
 
 .component-navigation__title {
 	margin: 50px 0 5px;
-	padding: 0 15px;
+	padding: 0 20px;
 	font-size: 20px;
 }
 
 .component-navigation__item a {
 	display: block;
-	padding: 5px 15px;
+	padding: 5px 20px;
 	color: #fff;
 	text-decoration: none;
 	cursor: pointer;
